trunk/OldArchive/8d8c4e56a4cf0340ade345b572d4b568-0f11904895a20602a6e5ca9f4b5b0039/output
+ g++ -std=c++1y -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In instantiation of ‘void f(It) [with It = __gnu_cxx::__normal_iterator<int*, std::vector<int> >]’:
main.cpp:14:24:   required from here
main.cpp:7:53: error: no type named ‘container_type’ in ‘class __gnu_cxx::__normal_iterator<int*, std::vector<int> >’
     typedef typename It::container_type::value_type value_type;
                                                     ^
